@@ -11,6 +11,8 @@ v5.4.0:
        (Details: http://jira.codehaus.org/browse/GMAVEN-88)
   - switch to Java 7 compiler, so new language features can be used
     (so users also need Java 7 for SportsTracker execution)
+  - use of new Java 7 language features (Project coin)
+    - use of try-with-resources statements, fixes many error handling bugs
 
 v5.3.0:
  ExerciseViewer changes:
